@@ -734,10 +734,10 @@ void ts::MergePlugin::mergeCAT()
     cat.version = (cat.version + 1) & SVERSION_MASK;
 
     // Add all CA descriptors from merged stream into main CAT.
-    for (size_t index = _merge_cat.descs.search(DID_CA); index < _merge_cat.descs.count(); index = _merge_cat.descs.search(DID_CA, index)) {
+    for (size_t index = _merge_cat.descs.search(DID_CA); index < _merge_cat.descs.count(); index = _merge_cat.descs.search(DID_CA, index + 1)) {
         const CADescriptor ca(*_merge_cat.descs[index]);
         // Check if the same EMM PID already exists in the main CAT.
-        if (CADescriptor::SearchByPID(_main_cat.descs, ca.ca_pid)) {
+        if (CADescriptor::SearchByPID(_main_cat.descs, ca.ca_pid) < _main_cat.descs.count()) {
             tsp->error(u"EMM PID conflict, PID 0x%X (%d) referenced in the two streams, dropping from merged stream", {ca.ca_pid, ca.ca_pid});
         }
         else {
